<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SenderDetailsActivity"
    android:background="@color/background2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/header_background"
        >
        <TextView
            android:id="@+id/tvReceiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/receiver"
            android:textSize="30sp"
            android:paddingLeft="8dp"
            android:textColor="@color/headertext_color"
            android:paddingTop="6dp" />

        <TextView
            android:id="@+id/tvDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/details"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="30sp"
            android:paddingLeft="8dp"
            android:textColor="@color/headertext_color"
            android:layout_marginTop="-6dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="6dp"
            app:boxBackgroundColor="@color/background_color"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="@color/background2"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:boxBackgroundColor="@color/background_color"
            android:layout_marginBottom="6dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="@color/background2"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rfName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:textSize="16sp"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="6dp"
            app:boxBackgroundColor="@color/background_color"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="@color/background2"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rCI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_information"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="6dp"
            app:boxBackgroundColor="@color/background_color"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="@color/background2"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rCountry"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="6dp"
            app:boxBackgroundColor="@color/background_color"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="@color/background2"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rAddress"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textSize="20sp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="50dp"
            android:id="@+id/btnRNext"
            android:backgroundTint="@color/header_color"
            >

        </Button>

    </LinearLayout>


</LinearLayout>