<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/asd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SenderDetailsActivity"
    android:background="@color/background2">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/header_background"
    >
    <TextView
        android:id="@+id/tvSender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sender"
        android:textSize="@dimen/text_size_title"
        android:paddingLeft="@dimen/left_padding"
        android:textColor="@color/headertext_color"
        android:paddingTop="@dimen/top_padding" />

    <TextView
        android:id="@+id/twDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/sDetails"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="@dimen/text_size_title"
        android:paddingLeft="@dimen/left_padding"
        android:textColor="@color/headertext_color"
        android:layout_marginTop="@dimen/negative_margin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_layout_margin_top"
            android:layout_marginRight="@dimen/input_layout_margin_horizontal"
            android:layout_marginLeft="@dimen/input_layout_margin_horizontal"
            android:layout_marginBottom="@dimen/input_layout_margin_vertical"
            app:boxBackgroundColor="@color/background_color"
            app:boxCornerRadiusBottomEnd="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/input_layout_corner_radius"
            app:boxStrokeColor="@color/background2"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sEmail"
                android:textSize="@dimen/text_size_input"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/input_layout_margin_horizontal"
            android:layout_marginRight="@dimen/input_layout_margin_horizontal"
            app:boxBackgroundColor="@color/background_color"
            android:layout_marginBottom="@dimen/input_layout_margin_vertical"
            app:boxCornerRadiusBottomEnd="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/input_layout_corner_radius"
            app:boxStrokeColor="@color/background2"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sFull_name"
                android:textSize="@dimen/text_size_input"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/input_layout_margin_horizontal"
            android:layout_marginRight="@dimen/input_layout_margin_horizontal"
            android:layout_marginBottom="@dimen/input_layout_margin_vertical"
            app:boxBackgroundColor="@color/background_color"
            app:boxCornerRadiusBottomEnd="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/input_layout_corner_radius"
            app:boxStrokeColor="@color/background2"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sCI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sContact_information"
                android:textSize="@dimen/text_size_input"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/input_layout_margin_horizontal"
            android:layout_marginRight="@dimen/input_layout_margin_horizontal"
            android:layout_marginBottom="@dimen/input_layout_margin_vertical"
            app:boxBackgroundColor="@color/background_color"
            app:boxCornerRadiusBottomEnd="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/input_layout_corner_radius"
            app:boxStrokeColor="@color/background2"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sCountry"
                android:textSize="@dimen/text_size_input"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/input_layout_margin_horizontal"
            android:layout_marginRight="@dimen/input_layout_margin_horizontal"
            android:layout_marginBottom="@dimen/input_layout_margin_vertical"
            app:boxBackgroundColor="@color/background_color"
            app:boxCornerRadiusBottomEnd="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/input_layout_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/input_layout_corner_radius"
            app:boxStrokeColor="@color/background2"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sAddress"
                android:textSize="@dimen/text_size_input"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sNext"
            android:textSize="@dimen/button_text_size"
            android:layout_marginLeft="@dimen/button_margin_horizontal"
            android:layout_marginRight="@dimen/button_margin_horizontal"
            android:layout_marginTop="@dimen/button_margin_top"
            android:id="@+id/btnSNext"
            android:backgroundTint="@color/header_color"
            >
        </Button>

    </LinearLayout>


</LinearLayout>